[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/TrackSelect.gd" type="Script" id=1]

[node name="TrackSelect" type="ConfirmationDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
window_title = "Select a track"
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMargin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="VBoxContainer" parent="MainMargin"]
margin_right = 584.0
margin_bottom = 556.0

[node name="TrackView" type="Tree" parent="MainMargin/Main"]
margin_right = 584.0
margin_bottom = 528.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 5
hide_folding = true
hide_root = true
select_mode = 1

[node name="LineEdit" type="LineEdit" parent="MainMargin/Main"]
margin_top = 532.0
margin_right = 584.0
margin_bottom = 556.0

[connection signal="text_changed" from="MainMargin/Main/LineEdit" to="." method="show_songs"]
